// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addAlarm: evaluateLowSampleCountPercentile can be overridden 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DummyServiceAlarmsprefixDefaultValue87B4F584": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Description",
        "AlarmName": "DummyServiceAlarms-prefix-DefaultValue",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 10,
        "Dimensions": Array [
          Object {
            "Name": "CustomDimension",
            "Value": "CustomDimensionValue",
          },
        ],
        "EvaluationPeriods": 10,
        "MetricName": "DummyMetric1",
        "Namespace": "DummyCustomNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixFalseValueBDCEF17E": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Description",
        "AlarmName": "DummyServiceAlarms-prefix-FalseValue",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 10,
        "Dimensions": Array [
          Object {
            "Name": "CustomDimension",
            "Value": "CustomDimensionValue",
          },
        ],
        "EvaluateLowSampleCountPercentile": "ignore",
        "EvaluationPeriods": 10,
        "MetricName": "DummyMetric1",
        "Namespace": "DummyCustomNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixTrueValue589160E5": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Description",
        "AlarmName": "DummyServiceAlarms-prefix-TrueValue",
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 10,
        "Dimensions": Array [
          Object {
            "Name": "CustomDimension",
            "Value": "CustomDimensionValue",
          },
        ],
        "EvaluationPeriods": 10,
        "MetricName": "DummyMetric1",
        "Namespace": "DummyCustomNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`addCompositeAlarm: AT_LEAST operator with absolute threshold 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DummyServiceAlarmsprefixAlarm1F4FCF957": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Testing alarm 1",
        "AlarmName": "DummyServiceAlarms-prefix-Alarm1",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 6,
        "EvaluationPeriods": 6,
        "MetricName": "DummyMetric",
        "Namespace": "DummyNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 1,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixAlarm25ADF8B37": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Testing alarm 2",
        "AlarmName": "DummyServiceAlarms-prefix-Alarm2",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 6,
        "EvaluationPeriods": 6,
        "MetricName": "DummyMetric",
        "Namespace": "DummyNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 2,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixAlarm308E4C14F": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Testing alarm 3",
        "AlarmName": "DummyServiceAlarms-prefix-Alarm3",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 6,
        "EvaluationPeriods": 6,
        "MetricName": "DummyMetric",
        "Namespace": "DummyNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 3,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixCompositeAtLeastBE84311C": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Composite alarm",
        "AlarmName": "DummyServiceAlarms-prefix-CompositeAtLeast",
        "AlarmRule": Object {
          "Fn::Join": Array [
            "",
            Array [
              "AT_LEAST(2, ALARM, (",
              Object {
                "Ref": "DummyServiceAlarmsprefixAlarm1F4FCF957",
              },
              ", ",
              Object {
                "Ref": "DummyServiceAlarmsprefixAlarm25ADF8B37",
              },
              ", ",
              Object {
                "Ref": "DummyServiceAlarmsprefixAlarm308E4C14F",
              },
              "))",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`addCompositeAlarm: AT_LEAST operator with percentage threshold 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DummyServiceAlarmsprefixAlarm1F4FCF957": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Testing alarm 1",
        "AlarmName": "DummyServiceAlarms-prefix-Alarm1",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 6,
        "EvaluationPeriods": 6,
        "MetricName": "DummyMetric",
        "Namespace": "DummyNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 1,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixAlarm25ADF8B37": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Testing alarm 2",
        "AlarmName": "DummyServiceAlarms-prefix-Alarm2",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 6,
        "EvaluationPeriods": 6,
        "MetricName": "DummyMetric",
        "Namespace": "DummyNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 2,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixAlarm308E4C14F": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Testing alarm 3",
        "AlarmName": "DummyServiceAlarms-prefix-Alarm3",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 6,
        "EvaluationPeriods": 6,
        "MetricName": "DummyMetric",
        "Namespace": "DummyNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 3,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixAlarm4782A133C": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Testing alarm 4",
        "AlarmName": "DummyServiceAlarms-prefix-Alarm4",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 6,
        "EvaluationPeriods": 6,
        "MetricName": "DummyMetric",
        "Namespace": "DummyNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 4,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixCompositeAtLeast50Percent54242EDB": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Composite alarm",
        "AlarmName": "DummyServiceAlarms-prefix-CompositeAtLeast50Percent",
        "AlarmRule": Object {
          "Fn::Join": Array [
            "",
            Array [
              "AT_LEAST(50%, ALARM, (",
              Object {
                "Ref": "DummyServiceAlarmsprefixAlarm1F4FCF957",
              },
              ", ",
              Object {
                "Ref": "DummyServiceAlarmsprefixAlarm25ADF8B37",
              },
              ", ",
              Object {
                "Ref": "DummyServiceAlarmsprefixAlarm308E4C14F",
              },
              ", ",
              Object {
                "Ref": "DummyServiceAlarmsprefixAlarm4782A133C",
              },
              "))",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`addCompositeAlarm: snapshot for operator 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DummyServiceAlarmsprefixAlarm1F4FCF957": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Testing alarm 1",
        "AlarmName": "DummyServiceAlarms-prefix-Alarm1",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 6,
        "EvaluationPeriods": 6,
        "MetricName": "DummyMetric",
        "Namespace": "DummyNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 1,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixAlarm25ADF8B37": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Testing alarm 2",
        "AlarmName": "DummyServiceAlarms-prefix-Alarm2",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 6,
        "EvaluationPeriods": 6,
        "MetricName": "DummyMetric",
        "Namespace": "DummyNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 2,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixCompositeAnd5A0BD2BE": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Composite alarm",
        "AlarmName": "DummyServiceAlarms-prefix-CompositeAnd",
        "AlarmRule": Object {
          "Fn::Join": Array [
            "",
            Array [
              "(ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm1F4FCF957",
                  "Arn",
                ],
              },
              "\\") AND ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm25ADF8B37",
                  "Arn",
                ],
              },
              "\\"))",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "DummyServiceAlarmsprefixCompositeOr52DCE220": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Composite alarm",
        "AlarmName": "DummyServiceAlarms-prefix-CompositeOr",
        "AlarmRule": Object {
          "Fn::Join": Array [
            "",
            Array [
              "(ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm1F4FCF957",
                  "Arn",
                ],
              },
              "\\") OR ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm25ADF8B37",
                  "Arn",
                ],
              },
              "\\"))",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`addCompositeAlarm: snapshot for suppressor alarm props 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DummyServiceAlarmsprefixAlarm1F4FCF957": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Testing alarm 1",
        "AlarmName": "DummyServiceAlarms-prefix-Alarm1",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 6,
        "Dimensions": Array [
          Object {
            "Name": "CustomDimension",
            "Value": "CustomDimensionValue",
          },
        ],
        "EvaluationPeriods": 6,
        "MetricName": "DummyMetric1",
        "Namespace": "DummyCustomNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 1,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixAlarm25ADF8B37": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Testing alarm 2",
        "AlarmName": "DummyServiceAlarms-prefix-Alarm2",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 6,
        "Dimensions": Array [
          Object {
            "Name": "CustomDimension",
            "Value": "CustomDimensionValue",
          },
        ],
        "EvaluationPeriods": 6,
        "MetricName": "DummyMetric1",
        "Namespace": "DummyCustomNamespace",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 2,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DummyServiceAlarmsprefixSuppressedAlarmDefault3397EEAA": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "ActionsSuppressor": Object {
          "Fn::GetAtt": Array [
            "DummyServiceAlarmsprefixSuppressorAlarm7A8145E7",
            "Arn",
          ],
        },
        "ActionsSuppressorExtensionPeriod": 60,
        "ActionsSuppressorWaitPeriod": 60,
        "AlarmDescription": "Composite alarm",
        "AlarmName": "DummyServiceAlarms-prefix-SuppressedAlarmDefault",
        "AlarmRule": Object {
          "Fn::Join": Array [
            "",
            Array [
              "(ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm1F4FCF957",
                  "Arn",
                ],
              },
              "\\") OR ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm25ADF8B37",
                  "Arn",
                ],
              },
              "\\"))",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "DummyServiceAlarmsprefixSuppressedAlarmTestBothExtensionAndWaitPeriodAD8EE66D": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "ActionsSuppressor": Object {
          "Fn::GetAtt": Array [
            "DummyServiceAlarmsprefixSuppressorAlarm7A8145E7",
            "Arn",
          ],
        },
        "ActionsSuppressorExtensionPeriod": 100,
        "ActionsSuppressorWaitPeriod": 100,
        "AlarmDescription": "Composite alarm",
        "AlarmName": "DummyServiceAlarms-prefix-SuppressedAlarmTestBothExtensionAndWaitPeriod",
        "AlarmRule": Object {
          "Fn::Join": Array [
            "",
            Array [
              "(ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm1F4FCF957",
                  "Arn",
                ],
              },
              "\\") OR ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm25ADF8B37",
                  "Arn",
                ],
              },
              "\\"))",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "DummyServiceAlarmsprefixSuppressedAlarmTestExtensionPeriodE8E43F86": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "ActionsSuppressor": Object {
          "Fn::GetAtt": Array [
            "DummyServiceAlarmsprefixSuppressorAlarm7A8145E7",
            "Arn",
          ],
        },
        "ActionsSuppressorExtensionPeriod": 100,
        "ActionsSuppressorWaitPeriod": 60,
        "AlarmDescription": "Composite alarm",
        "AlarmName": "DummyServiceAlarms-prefix-SuppressedAlarmTestExtensionPeriod",
        "AlarmRule": Object {
          "Fn::Join": Array [
            "",
            Array [
              "(ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm1F4FCF957",
                  "Arn",
                ],
              },
              "\\") OR ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm25ADF8B37",
                  "Arn",
                ],
              },
              "\\"))",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "DummyServiceAlarmsprefixSuppressedAlarmTestWaitPeriod09DC1879": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "ActionsSuppressor": Object {
          "Fn::GetAtt": Array [
            "DummyServiceAlarmsprefixSuppressorAlarm7A8145E7",
            "Arn",
          ],
        },
        "ActionsSuppressorExtensionPeriod": 60,
        "ActionsSuppressorWaitPeriod": 100,
        "AlarmDescription": "Composite alarm",
        "AlarmName": "DummyServiceAlarms-prefix-SuppressedAlarmTestWaitPeriod",
        "AlarmRule": Object {
          "Fn::Join": Array [
            "",
            Array [
              "(ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm1F4FCF957",
                  "Arn",
                ],
              },
              "\\") OR ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm25ADF8B37",
                  "Arn",
                ],
              },
              "\\"))",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "DummyServiceAlarmsprefixSuppressorAlarm7A8145E7": Object {
      "Properties": Object {
        "ActionsEnabled": false,
        "AlarmDescription": "Composite alarm",
        "AlarmName": "DummyServiceAlarms-prefix-SuppressorAlarm",
        "AlarmRule": Object {
          "Fn::Join": Array [
            "",
            Array [
              "(ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm1F4FCF957",
                  "Arn",
                ],
              },
              "\\") OR ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "DummyServiceAlarmsprefixAlarm25ADF8B37",
                  "Arn",
                ],
              },
              "\\"))",
            ],
          ],
        },
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
